# whatts_dev

./: AUDIT_REPORT.md  README.md  future_features.md  progress_log_N100_quantile_regression.txt  progress_log_N200_quantile_regression.txt  progress_log_N30_quantile_regression.txt  progress_log_N60_quantile_regression.txt  pyproject.toml  qr_n100.out  qr_n100_2.out  qr_n200.out  qr_n200_2.out  qr_n60.out  qr_n60_2.out
docs/: STATISTICAL_METHODOLOGY.md
reports/: practical_workflow_detrending_projection.md  statistical_frameworks_environmental_compliance.md
scripts/: check_mannks.py  check_wh_method.py  debug_v03a.py  generate_v05_scripts.py  generate_v06_scripts.py
src/whatts/: __init__.py  bootstrap.py  core.py  mannks.py  plotting.py  qr.py  stats.py  utils.py
tests/: test_audit_fixes.py  test_audit_verification.py  test_core_enhancements.py  test_integration.py  test_low_sample_size.py  test_qr.py  test_stats.py  test_stats_edge_cases.py  test_trend_projection.py
validation/: VALIDATION_GUIDE.md  VALIDATION_TEMPLATE.md  check_wh_percentile_coverage.py  master_results.csv  validation_plan.py
validation/cases/V-01_Baseline_Percentiles/: README.md  run_test.py
validation/cases/V-01a_p50/: README.md  run_test_N100_QR.py  run_test_N100_WH.py  run_test_N200_QR.py  run_test_N200_WH.py  run_test_N30_QR.py  run_test_N30_WH.py  run_test_N60_QR.py  run_test_N60_WH.py
validation/cases/V-01b_p75/: README.md  run_test.py  run_test_N100_QR.py  run_test_N100_WH.py  run_test_N200_QR.py  run_test_N200_WH.py  run_test_N30_QR.py  run_test_N30_WH.py  run_test_N60_QR.py  (+1 more)
(+166 files in other folders)
