[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whatts"
version = "0.1.0"
description = "Wilson-Hazen statistics for Autocorrelated Trending Time Series"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.7",
    "mannks",
    "matplotlib"
]

[project.optional-dependencies]
dev = [
    "pytest"
]
